[package]
authors = ["Vinzent Steinberg <Vinzent.Steinberg@gmail.com>"]
categories = ["algorithms"]
description = "Xoroshiro128+, xorshift1024*φ and splitmix64 random number generators"
documentation = "https://docs.rs/xoroshiro"
keywords = ["rng"]
license = "MIT/Apache-2.0"
name = "xoroshiro"
repository = "https://github.com/vks/xoroshiro"
version = "0.3.0"
autobenches = false

[[bench]]
harness = false
name = "bench"

[dependencies]
rand_core = "0.2"

[dependencies.byteorder]
default-features = false
version = "1"

[dev-dependencies]
bencher = "0.1"
rand = "0.5"
